@@ -45,7 +45,8 @@ public class SecurityConfig {
                     @Override
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
+//                        config.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
+                        config.setAllowedOriginPatterns(List.of("*"));
                         config.setAllowedMethods(Collections.singletonList("*"));
                         config.setAllowCredentials(true);
                         config.setAllowedHeaders(Collections.singletonList("*"));
@@ -67,7 +68,7 @@ public class SecurityConfig {
                         .requestMatchers("/api/v1/auth/**").permitAll()
                         // product
                         .requestMatchers(HttpMethod.POST, "/api/v1/products").hasRole(ROLE_MANAGER)
-                        .requestMatchers(HttpMethod.PUT, "/api/v1/products").hasRole(ROLE_MANAGER)
+                        .requestMatchers(HttpMethod.PUT, "/api/v1/products/**").hasRole(ROLE_MANAGER)
                         .requestMatchers(HttpMethod.DELETE, "/api/v1/products").hasRole(ROLE_MANAGER)
                         .requestMatchers(HttpMethod.POST, "api/v1/upload").hasRole(ROLE_MANAGER)
                         .requestMatchers(HttpMethod.GET, "/api/v1/products/**").permitAll()
